--- a/geek-m/src/index.sass
+++ b/geek-m/src/index.sass
@@ -12,3 +12,14 @@ p,
 h2,
 h3
   margin: 0
+:root:root
+  --adm-color-primary: #fc6627
+  --adm-font-family: 'PingFangSC-Regular'
+
+  --font-size: 16px
+.icon
+  width: 1em
+  height: 1em
+  vertical-align: -0.15em
+  fill: currentColor
+  overflow: hidden
